data/test/method_as_function/negative/2004.js
const axios = require('axios');
const id = 42
axios.get(`https://petstore_swagger.io/v2/pets/${id}`);